# identity-monad

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
doc/: identity-monad.org
etc/: clang-13-toolchain.cmake
haskell/: Id.hs
lib/: CMakeLists.txt  identity.cpp  identity.h
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/identity/: CMakeLists.txt  identity.cpp  identity.t.cpp
src/main/: main.cpp
tests/: CMakeLists.txt  identity.t.cpp
